--- a/popup.html
+++ b/popup.html
@@ -1,27 +1,51 @@
-<html>
+﻿<html>
 
 <head>
-    <title>Piano cypher</title>
+        <meta charset=utf-8>
+        <title>Password Piano - Chrome Extension</title>
+        <meta name="description" content="A piano synth that helps you storing passwords" />
+        <link rel="stylesheet" type="text/css" href="piano.css" />
 </head>
 
 <body>
-    <img src="icons/piano.png">
-    <h1>Piano Password Generator</h1>
+    <!-- <img src="icons/piano.png"> -->
+    <!-- <h1>Piano Password Generator</h1>
     <p>Here's all the stuff we'll be able to do:</p>
     <ul>
         <li>Encrypt a messsage in a page</li>
         <li>The piano is the encrypter</li>
-    </ul>
-    <button class="piano-key" id="A">KeyA</button>
-    <button class="piano-key" id="D">KeyD</button>
-    <button class="piano-key" id="C">KeyC#</button>
-    <button class="piano-key" id="B">KeyB</button>
-    <button class="piano-key" id="E">KeyE</button>
-    <button class="password-key" id="password">Store Password</button>
-    <button class="password-key" id="encrypt">Encrypt Message</button>
-    <button class="password-key" id="decrypt">Decrypt Message</button>
-    <textarea name="message" id="message" cols="10" rows="10"></textarea>
+    </ul> -->
+
+<div id="content">
+        <div id="content-inner">
+        <div id="piano">
+                <h1>Password Piano</h1>
+        </div>
+        </div>
+        </div>
+<div id="below">
+<div id="below-inner">
+        <h2>Gateway to your secret messsages</h2>
+
+<!-- <button class="piano-key" id="A">KeyA</button>
+<button class="piano-key" id="D">KeyD</button>
+<button class="piano-key" id="C">KeyC#</button>
+<button class="piano-key" id="B">KeyB</button>
+<button class="piano-key" id="E">KeyE</button> -->
+<button class="password-key" id="password">Store Password</button>
+<button class="password-key" id="encrypt">Encrypt Message</button>
+<button class="password-key" id="decrypt">Decrypt Message</button>
+<br>
+<textarea name="message" id="message" cols="50" rows="10"></textarea>
+</div>
+</div>
+
+
+
 </body>
 <script src="popup.js"></script>
+<script src="jquery-1.7.1.min.js"></script>
+<script src="audio.js"></script>
+<script src="piano.js"></script>
 
 </html>
