--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,10 @@
 ﻿<html>
 
 <head>
-        <meta charset=utf-8>
-        <title>Password Piano - Chrome Extension</title>
-        <meta name="description" content="A piano synth that helps you storing passwords" />
-        <link rel="stylesheet" type="text/css" href="piano.css" />
+    <meta charset=utf-8>
+    <title>Password Piano - Chrome Extension</title>
+    <meta name="description" content="A piano synth that helps you storing passwords" />
+    <link rel="stylesheet" type="text/css" href="piano.css" />
 </head>
 
 <body>
@@ -16,36 +16,36 @@
         <li>The piano is the encrypter</li>
     </ul> -->
 
-<div id="content">
+    <div id="content">
         <div id="content-inner">
-        <div id="piano">
+            <div id="piano">
                 <h1>Password Piano</h1>
+            </div>
         </div>
-        </div>
-        </div>
-<div id="below">
-<div id="below-inner">
-        <h2>Gateway to your secret messsages</h2>
+    </div>
+    <div id="below">
+        <div id="below-inner">
+            <h2>Gateway to your secret messsages</h2>
 
-<!-- <button class="piano-key" id="A">KeyA</button>
+            <!-- <button class="piano-key" id="A">KeyA</button>
 <button class="piano-key" id="D">KeyD</button>
 <button class="piano-key" id="C">KeyC#</button>
 <button class="piano-key" id="B">KeyB</button>
 <button class="piano-key" id="E">KeyE</button> -->
-<button class="password-key" id="password">Store Password</button>
-<button class="password-key" id="encrypt">Encrypt Message</button>
-<button class="password-key" id="decrypt">Decrypt Message</button>
-<br>
-<textarea name="message" id="message" cols="50" rows="10"></textarea>
-</div>
-</div>
+            <button class="password-key" id="password">Store Password</button>
+            <button class="password-key" id="encrypt">Encrypt Message</button>
+            <button class="password-key" id="decrypt">Decrypt Message</button>
+            <br>
+            <textarea name="message" id="message" cols="50" rows="10"></textarea>
+        </div>
+    </div>
 
 
 
 </body>
-<script src="popup.js"></script>
 <script src="jquery-1.7.1.min.js"></script>
 <script src="audio.js"></script>
 <script src="piano.js"></script>
+<!-- <script src="popup.js"></script> -->
 
 </html>
