added some error handling

--- a/popup.html
+++ b/popup.html
@@ -32,7 +32,7 @@
 <button class="piano-key" id="C">KeyC#</button>
 <button class="piano-key" id="B">KeyB</button>
 <button class="piano-key" id="E">KeyE</button> -->
-            <button class="password-key" id="password">Store Password</button>
+            <!-- <button class="password-key" id="password">Store Password</button> -->
             <button class="password-key" id="encrypt">Encrypt Message</button>
             <button class="password-key" id="decrypt">Decrypt Message</button>
             <br>
